# mlops-fraud-detection-service

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/config/: config.py
app/db/: db.py
app/services/: ml_service.py
app/ui/: gradio_app.py
data/processed/: X_test_scaled.parquet  X_train_scaled.parquet  y_test.parquet  y_train.parquet
models/: LightGBM_best.onnx  LogisticRegression_best.onnx  RandomForest_best.joblib  RandomForest_best.onnx
monitoring/: monitor_drift.py
reports/: data_drift_report.json
results/: lgb_best_params.json  logreg_best_params.json  model_comparison.csv  rf_best_params.json
src/: data_preprocessing.py  explainability.py  hpo.py  run_data_prep.py  train_and_evaluate.py  tune_models.py
