[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.38.0",
    "joblib>=1.5.2",
    "onnxmltools>=1.14.0",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "evidently>=0.7.16",
    "mlflow>=3.6.0",
    "pip>=25.3",
    "boto3>=1.41.4",
    "torchvision>=0.24.1",
    "seaborn>=0.13.2",
    "ipykernel>=7.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "skl2onnx==1.15.0",
    "pyarrow>=22.0.0"
]